Update contact links with formatted phone and email

--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@
                     <h1>Chirag Chhatbar</h1>
                     <p class="tagline">Marketing Analytics Leader | Transforming Data Into Business Impact</p>
                     <div class="contact-buttons">
-                        <a href="tel:9908016703" class="btn btn-primary">📞 Call Me</a>
-                        <a href="mailto:chirag2000@gmail.com" class="btn btn-outline">📧 Email</a>
+                        <a href="tel:9908016703" class="btn btn-primary">📞 +91-9908016703</a>
+                        <a href="mailto:chirag2000@gmail.com" class="btn btn-outline">📧 Email: chirag2000@gmail.com</a>
                         <a href="https://linkedin.com/in/chhatbarchirag" target="_blank" class="btn btn-outline">💼 LinkedIn</a>
                     </div>
                 </div>
