--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                         <a href="tel:9908016703" class="btn btn-primary">📞 +91-9908016703</a>
                         <a href="mailto:chirag2000@gmail.com" class="btn btn-outline">📧 Email: chirag2000@gmail.com</a>
                         <a href="https://linkedin.com/in/chhatbarchirag" target="_blank" class="btn btn-outline">💼 LinkedIn</a>
-                        <a href="audit.html" class="cta">Try My AI Marketing Audit</a>
+                        //<a href="audit.html" class="cta">Try My AI Marketing Audit</a>
                     </div>
                 </div>
             </div>
